--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://ThilagavathiChandrasekar/github.io/quiz-app-react",
   "name": "project",
   "version": "0.1.0",
   "private": true,
@@ -9,6 +10,7 @@
     "aos": "^2.3.4",
     "bootstrap": "^5.3.2",
     "classnames": "^2.3.2",
+    "gh-pages": "^6.1.1",
     "materialize-css": "^1.0.0",
     "mongodb": "^6.2.0",
     "react": "^18.2.0",
@@ -25,6 +27,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
