--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://ThilagavathiChandrasekar/github.io/quiz-app-react",
+  "homepage": "https://ThilagavathiChandrasekar.github.io/quiz-app-react",
   "name": "project",
   "version": "0.1.0",
   "private": true,
